--- a/index.html
+++ b/index.html
@@ -151,16 +151,16 @@
   const GRID_ROWS = 10;
 
   const sampleVideos = [
-  "twQCZWBbcRE","AHZbB-bfh-k","hr8ZQ-Qybg8","AZ_eiVs91_I","YrgQDETGO00","aOgJXd93HLg","1gFSDD12RP8","xXp4iNBFL88","b1gE2G7yFzo","cESaIUWoCJQ",
-  "5R6bBNnZgDE","AZ_eiVs91_I","k48e9GzcQVM","5VAT_rUbLYE","Au3H5cYTUI8","V_f8Q2_Q_J0","AHZbB-bfh-k","9Qs5-_DOkVE","COvy3uC7t_E","9J4eS6I5_s0",
-  "Au3H5cYTUI8","J3i3F2e4IYs","V_f8Q2_Q_J0","NteGUDYZ1nE","Au3H5cYTUI8","COvy3uC7t_E","J3i3F2e4IYs","YrgQDETGO00","8xgnm6SynH4","9J4eS6I5_s0",
-  "V_f8Q2_Q_J0","b1gE2G7yFzo","J3i3F2e4IYs","k48e9GzcQVM","COvy3uC7t_E","YrgQDETGO00","AZ_eiVs91_I","cESaIUWoCJQ","k48e9GzcQVM","V_f8Q2_Q_J0",
-  "twQCZWBbcRE","5R6bBNnZgDE","8xgnm6SynH4","NteGUDYZ1nE","9J4eS6I5_s0","aOgJXd93HLg","COvy3uC7t_E","hr8ZQ-Qybg8","5R6bBNnZgDE","9J4eS6I5_s0",
-  "J3i3F2e4IYs","5VAT_rUbLYE","k48e9G9zcQVM","V_f8Q2_Q_J0","NteGUDYZ1nE","5R6bBNnZgDE","hr8ZQ-Qybg8","xXp4iNBFL88","b1gE2G7yFzo","AZ_eiVs91_I",
-  "twQCZWBbcRE","9Qs5-_DOkVE","9J4eS6I5_s0","9Qs5-_DOkVE","cESaIUWoCJQ","YrgQDETGO00","V_f8Q2_Q_J0","AHZbB-bfh-k","AHZbB-bfh-k","AHZbB-bfh-k",
-  "1gFSDD12RP8","8xgnm6SynH4","NteGUDYZ1nE","Au3H5cYTUI8","hr8ZQ-Qybg8","b1gE2G7yFzo","Au3H5cYTUI8","1gFSDD12RP8","COvy3uC7t_E","hr8ZQ-Qybg8",
-  "5VAT_rUbLYE","AZ_eiVs91_I","k48e9GzcQVM","b1gE2G7yFzo","J3i3F2e4IYs","YrgQDETGO00","V_f8Q2_Q_J0","twQCZWBbcRE","xXp4iNBFL88","aOgJXd93HLg",
-  "1gFSDD12RP8","9Qs5-_DOkVE","twQCZWBbcRE","NteGUDYZ1nE","5VAT_rUbLYE","YrgQDETGO00","cESaIUWoCJQ","5R6bBNnZgDE","xXp4iNBFL88"
+  "dqKpx51vKLc","WJ-kuy2Bogw","jfreFPe99GU","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
+  "","","","","","","","","","",
   ];
 
   let tileNumbersVisible = true; // Track visibility state
