--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   const GRID_ROWS = 10;
 
   const sampleVideos = [
-  "dqKpx51vKLc","WJ-kuy2Bogw","jfreFPe99GU","","","","","","","",
+  "dqKpx51vKLc","WJ-kuy2Bogw","jfreFPe99GU","8wtLZzLhIAs","tFU2nhcu2Fs","","","","","",
   "","","","","","","","","","",
   "","","","","","","","","","",
   "","","","","","","","","","",
