--- a/index.html
+++ b/index.html
@@ -1,281 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8" />
- <title>Million Tile Music Video Wall</title>
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <style>
- /* Banner Styles */
- #banner {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #f0c14b;
-  color: #000;
-  text-align: center;
-  padding: 4px 0;
-  z-index: 1000;
-  font-size: 13px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
- }
+  <meta charset="UTF-8" />
+  <title>Million Tile Music Video Wall</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    #banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #f0c14b;
+      color: #000;
+      text-align: center;
+      padding: 4px 0;
+      z-index: 1000;
+      font-size: 13px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
- #banner a {
-  color: #000;
-  text-decoration: none;
-  font-weight: bold;
-  margin-right: 20px; /* Spacing between link and button */
- }
+    #banner a {
+      color: #000;
+      text-decoration: none;
+      font-weight: bold;
+      margin-right: 20px;
+    }
 
- #banner a:hover {
-  text-decoration: underline;
- }
+    #banner a:hover {
+      text-decoration: underline;
+    }
 
- /* Button Styles */
- #playAllButton, #toggleNumbersButton {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 8px 16px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  cursor: pointer;
-  border-radius: 5px;
-  margin-left: 10px; /* Space between buttons */
- }
+    #playAllButton, #toggleNumbersButton {
+      background-color: #4CAF50;
+      border: none;
+      color: white;
+      padding: 8px 16px;
+      text-align: center;
+      font-size: 16px;
+      cursor: pointer;
+      border-radius: 5px;
+      margin-left: 10px;
+    }
 
- /* Tile Number Styles */
- .tile-number {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 20px;
-  background: rgba(0, 0, 0, 0.7);
-  color: white;
-  text-align: center;
-  line-height: 20px;
-  font-size: 12px;
-  opacity: 1;
-  transition: opacity 0.3s ease;
- }
+    .tile-number {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 20px;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      text-align: center;
+      line-height: 20px;
+      font-size: 12px;
+      opacity: 1;
+      transition: opacity 0.3s ease;
+    }
 
- .tile:hover .tile-number {
-  opacity: 1;
- }
+    .tile:hover .tile-number {
+      opacity: 1;
+    }
 
- /* Hidden Tile Number Style */
- .tile-number.hidden {
-  display: none;
- }
+    .tile-number.hidden {
+      display: none;
+    }
 
- /* Existing Styles - unchanged */
- html, body {
-  margin: 0;
-  height: 100%;
-  overflow: hidden;
-  background: #000;
-  font-family: sans-serif;
-  color: white;
- }
+    html, body {
+      margin: 0;
+      height: 100%;
+      overflow: hidden;
+      background: #000;
+      font-family: sans-serif;
+      color: white;
+    }
 
- #viewport {
-  width: 100vw;
-  height: 100vh;
-  overflow: auto;
-  position: relative;
-  top: 40px;
- }
+    #viewport {
+      width: 100vw;
+      height: 100vh;
+      overflow: auto;
+      position: relative;
+      top: 40px;
+    }
 
- #grid {
-  position: relative;
-  width: 160000px;
-  height: 90000px;
- }
+    #grid {
+      position: relative;
+      width: 160000px;
+      height: 90000px;
+    }
 
- .tile {
-  position: absolute;
-  width: 160px;
-  height: 90px;
-  background: #222;
-  overflow: hidden;
-  cursor: pointer;
- }
+    .tile {
+      position: absolute;
+      width: 160px;
+      height: 90px;
+      background: #222;
+      overflow: hidden;
+      cursor: pointer;
+    }
 
- .tile img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
- }
+    .tile img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+    }
 
- .iframe-container {
-  width: 100%;
-  height: 100%;
- }
+    .iframe-container {
+      width: 100%;
+      height: 100%;
+    }
 
- .iframe-container iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
- }
- </style>
+    .iframe-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 
 <body>
- <div id="banner">
-  <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
-  Support the Million Tile Video Wall on Indiegogo!
-  </a>
-  <button id="playAllButton">Play Visible Videos</button>
-  <button id="toggleNumbersButton">Toggle Numbers</button>
- </div>
+  <div id="banner">
+    <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
+      Support the Million Tile Video Wall on Indiegogo!
+    </a>
+    <button id="playAllButton">Play Visible Videos</button>
+    <button id="toggleNumbersButton">Toggle Numbers</button>
+  </div>
 
- <div id="viewport">
-  <div id="grid"></div>
- </div>
+  <div id="viewport">
+    <div id="grid"></div>
+  </div>
 
- <script>
-  const viewport = document.getElementById('viewport');
-  const grid = document.getElementById('grid');
-  const playAllButton = document.getElementById('playAllButton');
-  const toggleNumbersButton = document.getElementById('toggleNumbersButton'); // Get the new button
+  <script>
+    const viewport = document.getElementById('viewport');
+    const grid = document.getElementById('grid');
+    const playAllButton = document.getElementById('playAllButton');
+    const toggleNumbersButton = document.getElementById('toggleNumbersButton');
 
-  const TILE_WIDTH = 160;
-  const TILE_HEIGHT = 90;
-  const GRID_COLS = 10;
-  const GRID_ROWS = 10;
+    const TILE_WIDTH = 160;
+    const TILE_HEIGHT = 90;
+    const GRID_COLS = 10;
+    const GRID_ROWS = 10;
 
-  const sampleVideos = [
-  "dqKpx51vKLc","WJ-kuy2Bogw","jfreFPe99GU","8wtLZzLhIAs","tFU2nhcu2Fs","EUadj4yDug8","Xs4Z_4nQV2Y","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  "","","","","","","","","","",
-  ];
+    const sampleVideos = [
+      "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs","EUadj4yDug8", "Xs4Z_4nQV2Y", "", "", "",
+      "", "", "", "", "", "", "", "", "", "",
+      "", "", "", "", "", "", "", "", "", "",
+      "", "", "", "", "", "", "", "", "", "",
+      "", "", "", "", "", "", "", "", "", "",
+      "", "", "", "", "", "", "", "", "", "",
+      "", "", "", "", "", "", "", "", "", "",
+      "", "", "", "", "", "", "", "", "", "",
+      "", "", "", "", "", "", "", "", "", ""
+    ];
 
-  let tileNumbersVisible = true; // Track visibility state
+    let tileNumbersVisible = true;
+    const visibleTiles = {};
 
-  const visibleTiles = {};
+    function renderTiles() {
+      const scrollLeft = viewport.scrollLeft;
+      const scrollTop = viewport.scrollTop;
+      const viewportWidth = viewport.clientWidth;
+      const viewportHeight = viewport.clientHeight;
 
-  function renderTiles() {
-  const scrollLeft = viewport.scrollLeft;
-  const scrollTop = viewport.scrollTop;
-  const viewportWidth = viewport.clientWidth;
-  const viewportHeight = viewport.clientHeight;
+      const startCol = Math.floor(scrollLeft / TILE_WIDTH);
+      const endCol = Math.min(GRID_COLS, Math.ceil((scrollLeft + viewportWidth) / TILE_WIDTH));
+      const startRow = Math.floor(scrollTop / TILE_HEIGHT);
+      const endRow = Math.min(GRID_ROWS, Math.ceil((scrollTop + viewportHeight) / TILE_HEIGHT));
 
-  const startCol = Math.floor(scrollLeft / TILE_WIDTH);
-  const endCol = Math.min(GRID_COLS, Math.ceil((scrollLeft + viewportWidth) / TILE_WIDTH));
-  const startRow = Math.floor(scrollTop / TILE_HEIGHT);
-  const endRow = Math.min(GRID_ROWS, Math.ceil((scrollTop + viewportHeight) / TILE_HEIGHT));
+      const newVisible = {};
 
-  const newVisible = {};
+      for (let row = startRow; row < endRow; row++) {
+        for (let col = startCol; col < endCol; col++) {
+          const key = `${row}_${col}`;
+          newVisible[key] = true;
+          if (!visibleTiles[key]) {
+            const youtubeId = sampleVideos[(row * GRID_COLS + col) % sampleVideos.length];
 
-  for (let row = startRow; row < endRow; row++) {
-  for (let col = startCol; col < endCol; col++) {
-  const key = `${row}_${col}`;
-  newVisible[key] = true;
-  if (!visibleTiles[key]) {
-  const youtubeId = sampleVideos[(row * GRID_COLS + col) % sampleVideos.length];
+            const tile = document.createElement("div");
+            tile.className = "tile";
+            tile.style.top = `${row * TILE_HEIGHT}px`;
+            tile.style.left = `${col * TILE_WIDTH}px`;
 
-  const tile = document.createElement("div");
-  tile.className = "tile";
-  tile.style.top = `${row * TILE_HEIGHT}px`;
-  tile.style.left = `${col * TILE_WIDTH}px`;
+            const img = document.createElement("img");
+            img.src = `http://img.youtube.com/vi/${youtubeId}/hqdefault.jpg`;
+            img.alt = `Tile ${row}, ${col}`;
+            tile.appendChild(img);
 
-  const img = document.createElement("img");
-  img.src = `http://img.youtube.com/vi/${youtubeId}/hqdefault.jpg`; // Corrected YouTube thumbnail URL
-  img.alt = `Tile ${row}, ${col}`;
-  tile.appendChild(img);
+            const tileNumber = document.createElement("div");
+            tileNumber.className = "tile-number";
+            tileNumber.textContent = (row * GRID_COLS + col) + 1;
+            if (!tileNumbersVisible) {
+              tileNumber.classList.add('hidden');
+            }
+            tile.appendChild(tileNumber);
 
-  const tileNumber = document.createElement("div");
-  tileNumber.className = "tile-number";
-  tileNumber.textContent = (row * GRID_COLS + col) + 1;
-  if (!tileNumbersVisible) {
-  tileNumber.classList.add('hidden');
-  }
-  tile.appendChild(tileNumber);
+            tile.addEventListener("click", () => {
+              tile.innerHTML = `
+                <div class="iframe-container">
+                  <iframe
+                    src="https://www.youtube.com/embed/${youtubeId}?autoplay=1&mute=1&playsinline=1"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>`;
+            });
 
-  tile.addEventListener("click", () => {
-  tile.innerHTML = `
-  <div class="iframe-container">
-  <iframe
-  src="https://www.youtube.com/embed/${youtubeId}?autoplay=1&mute=1&playsinline=1"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-  ></iframe>
-  </div>`;
-  });
+            grid.appendChild(tile);
+            visibleTiles[key] = tile;
+          }
+        }
+      }
 
-  grid.appendChild(tile);
-  visibleTiles[key] = tile;
-  }
-  }
-  }
+      for (let key in visibleTiles) {
+        if (!newVisible[key]) {
+          grid.removeChild(visibleTiles[key]);
+          delete visibleTiles[key];
+        }
+      }
+    }
 
-  for (let key in visibleTiles) {
-  if (!newVisible[key]) {
-  grid.removeChild(visibleTiles[key]);
-  delete visibleTiles[key];
-  }
-  }
-  }
+    renderTiles();
 
-  renderTiles();
+    playAllButton.addEventListener('click', () => {
+      const tilesToPlay = [];
+      for (let key in visibleTiles) {
+        const tileElement = visibleTiles[key];
+        const rect = tileElement.getBoundingClientRect();
+        const isPartiallyVisible = (
+          rect.bottom > 0 &&
+          rect.right > 0 &&
+          rect.top < (window.innerHeight || document.documentElement.clientHeight) &&
+          rect.left < (window.innerWidth || document.documentElement.clientWidth)
+        );
 
-  // Play Visible Videos functionality
-  playAllButton.addEventListener('click', () => {
-  const tilesToPlay = [];
-  for (let key in visibleTiles) {
-  // Ensure the tile is actually in the current viewport and not already playing
-  const tileElement = visibleTiles[key];
-  const rect = tileElement.getBoundingClientRect();
-  const isCompletelyVisible = (
-  rect.top >= 0 &&
-  rect.left >= 0 &&
-  rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-  rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-  );
+        if (isPartiallyVisible && !tileElement.querySelector('iframe')) {
+          tilesToPlay.push(tileElement);
+        }
+      }
 
-  if (isCompletelyVisible && !tileElement.querySelector('iframe')) {
-  tilesToPlay.push(tileElement);
-  }
-  }
+      let delay = 0;
+      const staggerDelay = 200;
 
-  let delay = 0;
-  const staggerDelay = 200; // 200ms delay between each video start
+      tilesToPlay.forEach(tile => {
+        setTimeout(() => {
+          tile.click();
+        }, delay);
+        delay += staggerDelay;
+      });
+    });
 
-  tilesToPlay.forEach(tile => {
-  setTimeout(() => {
-  tile.click(); // Simulate a click to play the video
-  }, delay);
-  delay += staggerDelay;
-  });
-  });
+    toggleNumbersButton.addEventListener('click', () => {
+      tileNumbersVisible = !tileNumbersVisible;
+      for (let key in visibleTiles) {
+        const tileNumber = visibleTiles[key].querySelector('.tile-number');
+        if (tileNumber) {
+          tileNumber.classList.toggle('hidden', !tileNumbersVisible);
+        }
+      }
+    });
 
-  // Toggle Numbers Functionality
-  toggleNumbersButton.addEventListener('click', () => {
-  tileNumbersVisible = !tileNumbersVisible;
-  for (let key in visibleTiles) {
-  const tileNumber = visibleTiles[key].querySelector('.tile-number');
-  if (tileNumber) {
-  tileNumber.classList.toggle('hidden', !tileNumbersVisible);
-  }
-  }
-  });
-
-  viewport.addEventListener("scroll", () => {
-  requestAnimationFrame(renderTiles);
-  });
- </script>
+    viewport.addEventListener("scroll", () => {
+      requestAnimationFrame(renderTiles);
+    });
+  </script>
 </body>
 </html>
