--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
       Support the Million Tile Video Wall on Indiegogo!
     </a>
-    <button id="playAllButton">Play Visible Videos</button>
-    <button id="toggleNumbersButton">Toggle Numbers</button>
+    <button id="playAllButton">Play</button>
+    <button id="toggleNumbersButton">Toggle #</button>
   </div>
 
   <div id="viewport">
