--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       Support the Million Tile Video Wall on Indiegogo!
     </a>
     <button id="playAllButton">Play</button>
-    <button id="toggleNumbersButton">Toggle #</button>
+<!--     <button id="toggleNumbersButton">Toggle #</button> -->
   </div>
 
   <div id="viewport">
