--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
   <div id="banner">
     <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
-      Support the Million Tile Video Wall on Indiegogo!
+      Support the Million Tile Video Wall Here!
     </a>
     <button id="playAllButton">Play</button>
 <!--     <button id="toggleNumbersButton">Toggle #</button> -->
