--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     }
 
     #viewport {
-      width: 1000vw;
-      height: 1000vh;
+      width: 1000vw; /*update*/
+      height: 1000vh; /*update*/
       overflow: auto;
       position: relative;
       top: 40px;
@@ -140,8 +140,8 @@
 
     const TILE_WIDTH = 160;
     const TILE_HEIGHT = 90;
-    const GRID_COLS = 100;
-    const GRID_ROWS = 100;
+    const GRID_COLS = 100; /*update*/
+    const GRID_ROWS = 100; /*update*/
 
     const sampleVideos = [
       "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs","EUadj4yDug8", "Xs4Z_4nQV2Y", "", "", "",
