--- a/index.html
+++ b/index.html
@@ -143,17 +143,31 @@
     const GRID_COLS = 100; /*update*/
     const GRID_ROWS = 100; /*update*/
 
-    const sampleVideos = [
-      "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs","EUadj4yDug8", "Xs4Z_4nQV2Y", "", "", "",
-      "", "", "", "", "", "", "", "", "", "",
-      "", "", "", "", "", "", "", "", "", "",
-      "", "", "", "", "", "", "", "", "", "",
-      "", "", "", "", "", "", "", "", "", "",
-      "", "", "", "", "", "", "", "", "", "",
-      "", "", "", "", "", "", "", "", "", "",
-      "", "", "", "", "", "", "", "", "", "",
-      "", "", "", "", "", "", "", "", "", ""
+    // const sampleVideos = [
+    //   "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs","EUadj4yDug8", "Xs4Z_4nQV2Y", "C6qOQ9D7puw", "", "",
+    //   "", "", "", "", "", "", "", "", "", "",
+    //   "", "", "", "", "", "", "", "", "", "",
+    //   "", "", "", "", "", "", "", "", "", "",
+    //   "", "", "", "", "", "", "", "", "", "",
+    //   "", "", "", "", "", "", "", "", "", "",
+    //   "", "", "", "", "", "", "", "", "", "",
+    //   "", "", "", "", "", "", "", "", "", "",
+    //   "", "", "", "", "", "", "", "", "", ""
+    // ];
+
+    const initialVideos = [
+      "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs", "EUadj4yDug8", "Xs4Z_4nQV2Y", "C6qOQ9D7puw"
     ];
+    
+    // How many to append (e.g., total length target is 10000)
+    const targetLength = 10000;
+    // Number of "dqKpx51vKLc" to append:
+    const toAppendCount = targetLength - initialVideos.length;
+    // Create an array filled with "dqKpx51vKLc"
+    const appendedVideos = new Array(toAppendCount).fill("dqKpx51vKLc");
+    // Combine both arrays
+    const sampleVideos = initialVideos.concat(appendedVideos);
+
 
     let tileNumbersVisible = true;
     const visibleTiles = {};
