--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     // Number of "dqKpx51vKLc" to append:
     const toAppendCount = targetLength - initialVideos.length;
     // Create an array filled with "dqKpx51vKLc"
-    const appendedVideos = new Array(toAppendCount).fill("dqKpx51vKLc");
+    const appendedVideos = new Array(toAppendCount).fill("");
     // Combine both arrays
     const sampleVideos = initialVideos.concat(appendedVideos);
 
