--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     }
 
     #viewport {
-      width: 1000vw; /*update*/
-      height: 1000vh; /*update*/
+      width: 10vw; /*update*/
+      height: 10vh; /*update*/
       overflow: auto;
       position: relative;
       top: 40px;
@@ -140,8 +140,8 @@
 
     const TILE_WIDTH = 160;
     const TILE_HEIGHT = 90;
-    const GRID_COLS = 100; /*update*/
-    const GRID_ROWS = 100; /*update*/
+    const GRID_COLS = 10; /*update*/
+    const GRID_ROWS = 10; /*update*/
 
     // const sampleVideos = [
     //   "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs","EUadj4yDug8", "Xs4Z_4nQV2Y", "C6qOQ9D7puw", "", "",
@@ -156,11 +156,11 @@
     // ];
 
     const initialVideos = [
-      "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs", "EUadj4yDug8", "Xs4Z_4nQV2Y", "C6qOQ9D7puw"
+      "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs", "tFU2nhcu2Fs", "EUadj4yDug8", "Xs4Z_4nQV2Y", "C6qOQ9D7puw","P_iiOMd3fOY"
     ];
     
     // How many to append (e.g., total length target is 10000)
-    const targetLength = 10000;
+    const targetLength = 100; /*update*/
     // Number of "dqKpx51vKLc" to append:
     const toAppendCount = targetLength - initialVideos.length;
     // Create an array filled with "dqKpx51vKLc"
