--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     html, body {
       margin: 0;
       height: 100%;
-      overflow: hidden;
+/*       overflow: hidden; */
       background: #000;
       font-family: sans-serif;
       color: white;
