--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     const viewport = document.getElementById('viewport');
     const grid = document.getElementById('grid');
     const banner = document.getElementById('banner');
-    banner.innerHTML += ` &nbsp;(${10} / 1,000,000 videos)`; // initialVideos.length is 10
+    banner.innerHTML += ` &nbsp; ${10} / 1,000,000 Videos `; // initialVideos.length is 10
 
     const TILE_WIDTH = 160;
     const TILE_HEIGHT = 90;
@@ -135,16 +135,16 @@
     ];
 
     const messages = [
-      "This is my favorite song!",
-      "Great track for workouts",
-      "Classic tune from the 80s",
-      "Chill vibes",
-      "Energetic party mix",
-      "Soothing acoustic",
-      "Upbeat pop hit",
-      "Inspirational soundtrack",
-      "Relaxing jazz piece",
-      "Motivational anthem"
+      "Gotta Start Somewhere!!!",
+      "Baianá nananananana",
+      "Gotta love that synth",
+      "Platinum Doug never disappoints!!",
+      "Lets get some quick comfort?!",
+      "This is one of the first songs to really get me on the edm train and it doesn't get old",
+      "Been listening to Oliver since 2014, never dissapointed, love this man and his music.",
+      "This song is ridiculous. I can't go a day without listening to it like 10 times.",
+      "To people trying to sing along! Cicovite konje na pajvant pasat Tuti man, tuti man, tuti libe na fidan",
+      "I have been looking for this song for five years and all I could remember was. I have the keys to heaven finally found it"
     ];
 
     const targetLength = 1000000;
@@ -234,7 +234,7 @@
     viewport.addEventListener("touchmove", renderTiles);
     viewport.addEventListener("wheel", renderTiles);
     window.addEventListener("resize", renderTiles);
-    
+
   </script>
 </body>
 </html>
