--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
               const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
               banner.innerHTML = `
                 Now playing video #${index + 1}: &nbsp;|&nbsp; ${message} 
-                &nbsp;|&nbsp;
+                &nbsp; &nbsp;
                 <a href="${videoUrl}" target="_blank">Click Here to Watch on YouTube</a>
               `;
             });
