--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     ];
 
     const messages = [
-      "Gotta Start Somewhere!!!",
+      "Blessed are those who expect nothing, for they shall never be disappointed.",
       "Baianá nananananana",
       "Gotta love that synth",
       "Platinum Doug never disappoints!!",
