--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               const message = messages[index % messages.length];
               const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
               banner.innerHTML = `
-                Now playing video #${index + 1}: &nbsp;|&nbsp; ${message} 
+                Message #${index + 1}: &nbsp;|&nbsp; ${message} 
                 &nbsp; &nbsp;
                 <a href="${videoUrl}" target="_blank">Click Here to Watch on YouTube</a>
               `;
