--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title> Million Message Mosaic. One million messages. One mosaic. One world.  </title>
+  <title> Million Message Wall. One million messages. One wall. One world.  </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     #banner {
@@ -109,7 +109,7 @@
 <body>
   <div id="banner">
     <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
-      Contribute to the Million Tile Video Wall Here!
+       Add your message to the Million Message Wall
     </a>
   </div>
 
