--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     const viewport = document.getElementById('viewport');
     const grid = document.getElementById('grid');
     const banner = document.getElementById('banner');
-    banner.innerHTML += ` &nbsp; ${10} / 1,000,000 Videos `; // initialVideos.length is 10
+    banner.innerHTML += ` &nbsp; ${10} / 1,000,000 Messages `; // initialVideos.length is 10
 
     const TILE_WIDTH = 160;
     const TILE_HEIGHT = 90;
