--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
     const viewport = document.getElementById('viewport');
     const grid = document.getElementById('grid');
     const banner = document.getElementById('banner');
-    banner.innerHTML += ` &nbsp; ${10} / 1,000,000 Messages `; // initialVideos.length is 10
+    banner.innerHTML += ` &nbsp; ${10} / 1,000,000 `;
 
     const TILE_WIDTH = 160;
     const TILE_HEIGHT = 90;
-    const GRID_COLS = 10;
-    const GRID_ROWS = 100000;
+    const GRID_COLS = 40;
+    const GRID_ROWS = 25000;
 
     const initialVideos = [
       "dqKpx51vKLc", "WJ-kuy2Bogw", "jfreFPe99GU", "8wtLZzLhIAs",
