--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 <body>
   <div id="banner">
     <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
-       Add your story to the Million Message Wall
+       Click here to add your story to the Million Message Wall — or select a title to explore.”
     </a>
   </div>
 
