--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       top: 0;
       left: 0;
       width: 100%;
-      background-color: #f0c14b;
-      color: #000;
+      background-color: #000;
+      color: #fff;
       text-align: center;
       padding: 4px 0;
       z-index: 1000;
@@ -20,9 +20,9 @@
       justify-content: center;
       align-items: center;
     }
-
+    
     #banner a {
-      color: #000;
+      color: #fff;
       text-decoration: none;
       font-weight: bold;
       margin-right: 20px;
