--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     banner.innerHTML += ` &nbsp; 0 / 1,000,000 `;
 
-    const baseURL = 'https://yourusername.github.io/million-message-wall/'; // Replace with your GitHub Pages base URL
+    const baseURL = 'https://qman2386.github.io/website/'; // Replace with your GitHub Pages base URL
 
     async function fetchChunk(type, chunkNumber) {
       const cache = type === 'videos' ? videoChunks : messageChunks;
