--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title> Million Message Wall. One million messages. One wall. One world.  </title>
+  <title>Million Message Wall. One million messages. One wall. One world.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     #banner {
@@ -13,23 +13,37 @@
       background-color: #000;
       color: #fff;
       text-align: center;
-      padding: 4px 0;
+      padding: 4px 8px;
       z-index: 1000;
       font-size: 16px;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
+      flex-wrap: wrap;
     }
-    
+
     #banner a {
       color: #fff;
       text-decoration: none;
       font-weight: bold;
-      margin-right: 20px;
+      margin-right: 10px;
     }
 
     #banner a:hover {
       text-decoration: underline;
+    }
+
+    .slider-controls {
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      margin-top: 4px;
+      margin-right: 10px;
+    }
+
+    button {
+      padding: 2px 8px;
+      font-size: 14px;
     }
 
     .tile-number {
@@ -68,7 +82,7 @@
       height: 1000vh;
       overflow: auto;
       position: relative;
-      top: 40px;
+      top: 60px;
     }
 
     #grid {
@@ -109,8 +123,14 @@
 <body>
   <div id="banner">
     <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
-       Click here to be a part of the Million Message Wall — or simply select a title to explore.
+      Click here to be a part of the Million Message Wall — or simply select a title to explore.
     </a>
+    <div class="slider-controls">
+      <span id="sliderValue">1</span>
+      <button id="downBtn">−</button>
+      <input type="range" id="videoSlider" min="1" max="1000" value="1">
+      <button id="upBtn">+</button>
+    </div>
   </div>
 
   <div id="viewport">
@@ -120,8 +140,6 @@
   <script>
     const viewport = document.getElementById('viewport');
     const grid = document.getElementById('grid');
-    const banner = document.getElementById('banner');
-    banner.innerHTML += ` &nbsp; ${10} / 1,000,000 `;
 
     const TILE_WIDTH = 160;
     const TILE_HEIGHT = 90;
@@ -141,7 +159,7 @@
       "Platinum Doug never disappoints!!",
       "Lets get some quick comfort?!",
       "This is one of the first songs to really get me on the edm train and it doesn't get old",
-      "Been listening to Oliver since 2014, never dissapointed, love this man and his music.",
+      "Been listening to Oliver since 2014, never disappointed, love this man and his music.",
       "This song is ridiculous. I can't go a day without listening to it like 10 times.",
       "To people trying to sing along! Cicovite konje na pajvant pasat Tuti man, tuti man, tuti libe na fidan",
       "I have been looking for this song for five years and all I could remember was. I have the keys to heaven finally found it"
@@ -183,7 +201,7 @@
             tile.style.left = `${col * TILE_WIDTH}px`;
 
             const img = document.createElement("img");
-            img.src = `http://img.youtube.com/vi/${youtubeId}/hqdefault.jpg`;
+            img.src = `https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg`;
             img.alt = `Tile ${row}, ${col}`;
             tile.appendChild(img);
 
@@ -198,16 +216,16 @@
             tile.addEventListener("click", () => {
               tile.innerHTML = `
                 <div class="iframe-container">
-                  <iframe
-                    src="https://www.youtube.com/embed/${youtubeId}?autoplay=1&mute=1&playsinline=1"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
+                  <img 
+                    src="https://img.youtube.com/vi/${youtubeId}/hqdefault.jpg" 
+                    alt="Video thumbnail" 
+                    style="width:100%; height:100%; object-fit:cover;" 
+                  />
                 </div>`;
 
               const message = messages[index % messages.length];
               const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
-              banner.innerHTML = `
+              document.getElementById('banner').innerHTML = `
                 Message #${index + 1}: &nbsp;|&nbsp; ${message} 
                 &nbsp; &nbsp;
                 <a href="${videoUrl}" target="_blank">Click Here to Watch on YouTube</a>
@@ -235,6 +253,41 @@
     viewport.addEventListener("wheel", renderTiles);
     window.addEventListener("resize", renderTiles);
 
+    // Slider Logic
+    const slider = document.getElementById('videoSlider');
+    const sliderValue = document.getElementById('sliderValue');
+    const upBtn = document.getElementById('upBtn');
+    const downBtn = document.getElementById('downBtn');
+
+    function updateSliderDisplay() {
+      const value = parseInt(slider.value, 10);
+      sliderValue.textContent = value;
+
+      const fileName = `videos-${value.toString().padStart(4, '0')}.txt`;
+      console.log("Selected file:", fileName);
+
+      // TODO: fetch(`./videos/${fileName}`).then(...);
+    }
+
+    slider.addEventListener('input', updateSliderDisplay);
+
+    upBtn.addEventListener('click', () => {
+      if (parseInt(slider.value, 10) < parseInt(slider.max, 10)) {
+        slider.value = parseInt(slider.value, 10) + 1;
+        slider.dispatchEvent(new Event('input'));
+        updateSliderDisplay();
+      }
+    });
+
+    downBtn.addEventListener('click', () => {
+      if (parseInt(slider.value, 10) > parseInt(slider.min, 10)) {
+        slider.value = parseInt(slider.value, 10) - 1;
+        slider.dispatchEvent(new Event('input'));
+        updateSliderDisplay();
+      }
+    });
+
+    updateSliderDisplay(); // initialize
   </script>
 </body>
 </html>
