--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 <body>
   <div id="banner">
     <a href="https://www.indiegogo.com/projects/ssrt-world-s-first-smart-solar-roof-tile" target="_blank">
-      Click here to be a part of the Million Message Wall — or simply select a wall and tile to explore.
+      Click here to be a part of the Million Message Wall or select a wall and tile to explore.
     </a>
     <div class="slider-controls">
       <span id="sliderValue">1</span>
