--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
       gap: 5px;
     }
 
-    button {
-      padding: 4px 12px;
-      font-size: 16px;
+  button {
+      padding: 4px 12px;      /* More padding vertically and horizontally */
+      font-size: 16px;        /* Bigger font size */
       cursor: pointer;
+      border-radius: 0px;     /* Slightly rounded corners */
+      min-width: 30px;        /* Minimum width for buttons */
+      min-height: 30px;       /* Minimum height for buttons */
     }
 
     .tile-number {
