--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       "I have been looking for this song for five years and all I could remember was. I have the keys to heaven finally found it"
     ];
 
-    const targetLength = 1000000;
+    const targetLength = 10000;
     const toAppendCount = targetLength - initialVideos.length;
     const appendedVideos = new Array(toAppendCount).fill("");
     const sampleVideos = initialVideos.concat(appendedVideos);
