--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       "P_iiOMd3fOY", "b63IPrrdPOU"
     ];
 
-    const initialmessages = [
+    const messages = [
       "Blessed are those who expect nothing, for they shall never be disappointed.",
       "Baianá nananananana",
       "Gotta love that synth",
@@ -208,9 +208,7 @@
     // const sampleVideos = initialVideos.concat(appendedVideos);
 
     let sampleVideos = [];
-    let sampleMessages = [];
     sampleVideos = initialVideos.concat(appendedVideos);
-    sampleMessages = initialmessages.concat(appendedVideos);
 
 
     let tileNumbersVisible = true;
@@ -236,9 +234,7 @@
 
           if (!visibleTiles[key]) {
             const index = (row * GRID_COLS + col);
-            
             const youtubeId = sampleVideos[index % sampleVideos.length];
-            const message = sampleMessages[index % sampleMessages.length];
 
             const tile = document.createElement("div");
             tile.className = "tile";
@@ -268,6 +264,7 @@
                   />
                 </div>`;
 
+              const message = messages[index % messages.length];
               const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
               document.getElementById('banner').innerHTML = `
                 Message #${index + 1}: &nbsp;|&nbsp; ${message} 
@@ -309,7 +306,6 @@
 
       const fileName = `${value.toString().padStart(4, '0')}`;  
       const file = `https://qman2386.github.io/website/videos-${fileName}.txt`;
-      const file1 = `https://qman2386.github.io/website/messages-${fileName}.txt`;
 
       fetch(file)
         .then(res => res.text())
@@ -317,40 +313,24 @@
           let initialVideos = [];
           initialVideos = text.trim().split('\n').map(line => line.trim()).filter(Boolean);
 
-          const targetLength = 1000;
+          const targetLength = 10000;
           const toAppendCount = targetLength - initialVideos.length;
           const appendedVideos = new Array(toAppendCount).fill("");
           sampleVideos = initialVideos.concat(appendedVideos);
-          
-          // Clear existing tiles
-          Object.keys(visibleTiles).forEach(key => {
-            grid.removeChild(visibleTiles[key]);
-            delete visibleTiles[key];
-          });
-          // Render new tiles
-          renderTiles();
-        });
-
-       fetch(file1)
-        .then(res => res.text())
-        .then(text => {
-          let initialMessages = [];
-          initialMessages = text.trim().split('\n').map(line => line.trim()).filter(Boolean);
-
-          const targetLength = 1000;
-          const toAppendCount = targetLength - initialVideos.length;
-          const appendedVideos = new Array(toAppendCount).fill("");
-          sampleMessages = initialMessages.concat(appendedVideos);
+          console.log(sampleVideos);
 
           // Clear existing tiles
           Object.keys(visibleTiles).forEach(key => {
             grid.removeChild(visibleTiles[key]);
             delete visibleTiles[key];
           });
+
           // Render new tiles
           renderTiles();
-        });      
+
       });
+
+
     }
 
     slider.addEventListener('input', updateSliderDisplay);
