--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
               const message = messages[index % messages.length] || "No message available.";
               const videoUrl = `https://www.youtube.com/watch?v=${youtubeId}`;
               document.getElementById('banner').innerHTML = `
-                Message #${index + 1}: &nbsp;|&nbsp; ${message} 
+                Wall ${slider.value} — Message #${index + 1}: &nbsp;|&nbsp; ${message} 
                 &nbsp; &nbsp;
                 <a href="${videoUrl}" target="_blank">Click Here to Watch on YouTube</a>
               `;
