--- a/index.html
+++ b/index.html
@@ -124,12 +124,20 @@
 
     input[type="range"] {
       -webkit-appearance: none;
-      width: 300px;
+      width: 60vw;
+      max-width: 400px;
+      min-width: 150px;
       height: 6px;
       background: #333;
       border-radius: 3px;
       outline: none;
       cursor: pointer;
+    }
+    
+    @media (max-width: 600px) {
+      input[type="range"] {
+        width: 80vw;
+      }
     }
 
     input[type="range"]::-webkit-slider-thumb {
